src/test/ui/const-eval/promoted_const_fn_fail.stderr
error[E0019]: promotable constant function contains unimplemented expression type
  --> $DIR/promoted_const_fn_fail.rs:32:9
   |
LL |         Bar { a: &42 }.b as u8
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
